force-app/main/default/objects/Player__c/fields/isCaptain__c.field-meta.xml
<CustomField>
    <fullName>isCaptain__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isCaptain</label>
    <type>Checkbox</type>
</CustomField>