force-app/main/default/objects/Player__c/fields/Jersy_Number__c.field-meta.xml
<CustomField>
    <fullName>Jersy_Number__c</fullName>
    <label>Jersy Number</label>
    <precision>15</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>